# pydeepseek

./: .gitignore  INSTALL.sh  pyproject.toml
src/deepseek/: cli.py  cli_parser.py  client.py  config.py  history.py  input.py  shell.py  stream.py  test.py  utils.py  validate.py
