[build-system]
requires = ['setuptools >= 77.0.3', 'openai', 'pyfzf']
build-backend = "setuptools.build_meta"

[project]
name = "deepseek"
version = "0.0.1"
authors = [{name = "Krunal Pamkar", email = 'caligian@protonmail.com'}]
description = "Simple python version of sed"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/caligian/deepseek"
Issues = "https://github.com/caligian/deepseek/issues"

[project.scripts]
deepseek = "deepseek.cli:cmdline"
